@@ -5,6 +5,13 @@ History of changes for @NAME@ for IDEA @IDEA-VERSION@
 Bug Fixes
 - Opening a non-text file resulted in some exceptions. This could happend when
   opening an image with the ImageViewer plugin.
+- Better handling of trying to edit a VCS controlled read-only file.
+- Properly handle multiple < or > in the :> and :< commands.
+- Fix some exception and assertions when opening multiple projects.
+- Fixed cursor position problem when issuing a c<motion> command that changed
+  text up to the end of line.
+- Using the C command on an empty file caused an error.
+- Changing the last word on the last line leaves cursor correctly.
 
 0.6.5 to 0.7.0
 
